--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,35 @@
     <artifactId>Selenium</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+
+            <groupId>org.slf4j</groupId>
+
+            <artifactId>slf4j-api</artifactId>
+
+            <version>1.7.30</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>ch.qos.logback</groupId>
+
+            <artifactId>logback-classic</artifactId>
+
+            <version>1.2.3</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>ch.qos.logback</groupId>
+
+            <artifactId>logback-core</artifactId>
+
+            <version>1.2.3</version>
+
+        </dependency>
         <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
